# sudoku_solver

./: Cargo.toml  log.txt  out.txt
src/: bit_vec.rs  bitset.rs  board.rs  cell.rs  heuristic.rs  main.rs  opt.rs
src/board/: empty_slots.rs
