[package]
name = "sudoku_solver"
version = "0.1.0"
authors = ["aleksanderwawrzyniak <aleksanderwawrzyniak98@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
rayon = "1.3.0"
rand = "0.7.3"
colored = "1.9.3"
